--- a/content/landing.mdx
+++ b/content/landing.mdx
@@ -1,5 +1,5 @@
 import RouteButton from "@peersky/next-web3-chakra/dist/components/RouteButton";
-import formLink from "../config.ts";
+import { formLink } from "../config.ts";
 
 # 🚧 This site is under construction 🚧
 
